Update privacy policy

--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -103,10 +103,9 @@ permalink: /privacy-policy/
         <div class="main section">
             <div class="container-1000">
                 <p>
-                    This is the privacy notice of Sybil Mayard trading as Sybiltech. In this document, "we", "our", or "us" refer to Sybil Mayard trading as Sybiltech.<br>
-                    I am a sole trader registered in the United Kingdom.<br>
-                    Our registered office is at TBC.<br>
-                </p>
+                    This is the privacy notice of Sybil Mayard trading as Sybiltech. In this document, "we", "our", or "us" refer to Sybil Mayard trading as Sybiltech.</p>
+                <p>Sybiltech is a sole trader registered in the United Kingdom.</p>
+                <p>Our registered office is at TBC.</p>
 
                 <h2>Introduction</h2>
                 <p>This privacy notice aims to inform you about how we collect and process any information that we collect from you, or that you provide to us. It covers information that could identify you ("personal information") and information that could not. In the context of the law and this notice, "process" means collect, store, transfer, use or otherwise act on information. It tells you about your privacy rights and how the law protects you.</p>
@@ -131,9 +130,9 @@ permalink: /privacy-policy/
                 </ul>
 
                 <p>
-                    Transaction data includes details about payments or communications to and from you and information about products and services you have purchased from us.<br>
-                    Technical data includes your internet protocol (IP) address, browser type and version, time zone setting and location, browser plug-in types and versions, operating system and platform and other technology on the devices you use to access this website.
-                </p>
+                    Transaction data includes details about payments or communications to and from you and information about products and services you have purchased from us.</p>
+                
+                    <p>Technical data includes your internet protocol (IP) address, browser type and version, time zone setting and location, browser plug-in types and versions, operating system and platform and other technology on the devices you use to access this website.</p>
 
                 <p>Your profile includes information such as your username and password, purchases or orders made by you, your interests, preferences, feedback and survey responses.</p>
 
@@ -148,8 +147,7 @@ permalink: /privacy-policy/
                 <h3>2. Special personal information</h3>
                 <p>
                     Special personal information is data about your race or ethnicity, religious or philosophical beliefs, sex life, sexual orientation, political opinions, trade union membership, information about your health and genetic and biometric data.
-                    It also includes information about criminal convictions and offences.<br>
-                    We do not collect any special personal information about you.
+                    It also includes information about criminal convictions and offences. We do not collect any special personal information about you.
                 </p>
 
                 <h3>3. If you do not provide personal information we need</h3>
@@ -164,7 +162,7 @@ permalink: /privacy-policy/
                 <p>If the basis changes then if required by law we shall notify you of the change and of any new basis under which we have determined that we can continue to process your information.</p>
 
                 <h3>4. Information we process because we have a contractual obligation with you</h3>
-                <p>When you create an account on our website, buy a product or service from us, or otherwise agree to our terms and conditions, a contract is formed between you and us.</p>
+                <p>When you submit a form on our website, buy a service from us, or otherwise agree to our terms and conditions, a contract is formed between you and us.</p>
 
                 <p>In order to carry out our obligations under that contract we must process the information you give us. Some of this information may be personal information.</p>
 
@@ -172,16 +170,16 @@ permalink: /privacy-policy/
 
                 <ul>
                     <li>verify your identity for security purposes</li>
-                    <li>sell products to you</li>
                     <li>provide you with our services</li>
                     <li>provide you with suggestions and advice on products, services and how to obtain the most from using our website</li>
-                    <li>We process this information on the basis there is a contract between us, or that you have requested we use the information before we enter into a legal contract.</li>
                 </ul>
+
+                <p>We process this information on the basis that there is a contract between us, or that you have requested we use the information before we enter into a legal contract.</p>
 
                 <p>We shall continue to process this information until the contract between us ends or is terminated by either party under the terms of the contract.</p>
 
                 <h3>5. Information we process with your consent</h3>
-                <p>Through certain actions when otherwise there is no contractual relationship between us, such as when you browse our website or ask us to provide you more information about our business, including job opportunities and our products and services, you provide your consent to us to process information that may be personal information.</p>
+                <p>Through certain actions when otherwise there is no contractual relationship between us, such as when you browse our website or ask us to provide you more information about our business, including job opportunities and our services, you provide your consent to us to process information that may be personal information.</p>
 
                 <p>Wherever possible, we aim to obtain your explicit consent to process this information, for example, by asking you to agree to our use of cookies.</p>
 
@@ -192,7 +190,7 @@ permalink: /privacy-policy/
                 <p>You may withdraw your consent at any time by instructing us at <a href="mailto:info@sybilmayard.com">info@sybilmayard.com</a>. However, if you do so, you may not be able to use our website or our services further.</p>
 
                 <h3>6. Information we process for the purposes of legitimate interests</h3>
-                <p>We may process information on the basis there is a legitimate interest, either to you or to us, of doing so.</p>
+                <p>We may process information on the basis that there is a legitimate interest, either to you or to us, of doing so.</p>
 
                 <p>Where we process your information on this basis, we do after having given careful consideration to:</p>
 
@@ -221,16 +219,15 @@ permalink: /privacy-policy/
 
                 <h2>Specific uses of information you provide to us</h2>
                 <h3>8. Information provided on the understanding that it will be shared with a third party</h3>
-                <p>Our website allows you to post information with a view to that information being read, copied, downloaded, or used by other people.</p>
+                <p>Our website may display information that you have provided to us, with a view to that information being read, copied, downloaded, or used by other people.</p>
 
                 <p>Examples include:</p>
 
                 <ul>
-                    <li>posting a message our forum</li>
-                    <li>tagging an image</li>
-                    <li>clicking on an icon next to another visitor's message to convey your agreement, disagreement or thanks</li>
-                    <li>In posting personal information, it is up to you to satisfy yourself about the privacy level of every person who might use it.</li>
+                    <li>testimonials displayed on the website.</li>
                 </ul>
+
+                <p>In posting personal information, it is up to you to satisfy yourself about the privacy level of every person who might use it.</p>
 
                 <p>We do not specifically use this information except to allow it to be displayed or shared.</p>
 
@@ -242,22 +239,17 @@ permalink: /privacy-policy/
                 <p>Provided your request is reasonable and there is no legal basis for us to retain it, then at our discretion we may agree to your request to delete personal information that you have posted. You can make a request by contacting us at <a href="mailto:info@sybilmayard.com">info@sybilmayard.com</a>.</p>
 
                 <h3>9. Complaints regarding content on our website</h3>
-                <p>Our website is a publishing medium. Anyone may register and then publish information about himself, herself or some other person.</p>
-
-                <p>We attempt to moderate user generated content, but we are not always able to do so as soon as that content is published.</p>
 
                 <p>If you complain about any of the content on our website, we shall investigate your complaint.</p>
 
                 <p>If we feel it is justified or if we believe the law requires us to do so, we shall remove the content while we investigate.</p>
 
-                <p>Free speech is a fundamental right, so we have to make a judgement as to whose right will be obstructed: yours, or that of the person who posted the content that offends you.</p>
+                <p>Free speech is a fundamental right, so we have to make a judgement as to whose right will be obstructed: yours, or that of the person who published the content that offends you.</p>
 
                 <p>If we think your complaint is vexatious or without any basis, we shall not correspond with you about it.</p>
 
                 <h3>10. Information relating to your method of payment</h3>
-                <p>Payment information is never taken by us or transferred to us either through our website or otherwise. Our employees and contractors never have access to it.</p>
-
-                <p>At the point of payment, you are transferred to a secure page on the website of PayPal or some other reputable payment service provider. That page may be branded to look like a page on our website, but it is not controlled by us.</p>
+                <p>Payment information is never taken by us or transferred to us either through our website or otherwise.</p>
 
                 <h3>11. Job application and employment</h3>
                 <p>If you send us information in connection with a job application, we may keep it for up to three years in case we decide to contact you at a later date.</p>
@@ -280,8 +272,8 @@ permalink: /privacy-policy/
 
                 <p>We may also compile statistics showing information obtained from this source to assess the level of service we provide, but not in a way that could identify you or any other person.</p>
 
-                <h3>14. Affiliate and business partner information</h3>
-                <p>This is information given to us by you in your capacity as an affiliate of us or as a business partner.</p>
+                <h3>14. Referral partners</h3>
+                <p>This is information given to us by you in your capacity as an affiliate of us or as a referral partner.</p>
 
                 <p>It allows us to recognise visitors that you have referred to us, and to credit to you commission due for such referrals. It also includes information that allows us to transfer commission to you.</p>
 
@@ -291,7 +283,7 @@ permalink: /privacy-policy/
 
                 <p>We expect any affiliate or partner to agree to reciprocate this policy.</p>
 
-                <p>Use of information we collect through automated systems when you visit our website</p>
+                <h2>Use of information we collect through automated systems when you visit our website</h2>
 
                 <h3>15. Cookies</h3>
                 <p>Cookies are small text files that are placed on your computer's hard drive by your web browser when you visit any website. They allow information gathered on one web page to be stored until it is needed for use on another, allowing a website to provide you with a personalised experience and the website owner with statistics about how you use the website so that it can be improved.</p>
@@ -311,9 +303,6 @@ permalink: /privacy-policy/
                 <ul>
                     <li>to track how you use our website</li>
                     <li>to record whether you have seen specific messages we display on our website</li>
-                    <li>to keep you signed in our site</li>
-                    <li>to record your answers to surveys and questionnaires on our site while you complete them</li>
-                    <li>to record the conversation thread during a live chat with our support team</li>
                 </ul>
                 <h3>16. Personal identifiers from your browsing activity</h3>
 
@@ -326,7 +315,7 @@ permalink: /privacy-policy/
                 <p>If combined with other information we know about you from previous visits, the data possibly could be used to identify you personally, even if you are not signed into our website.</p>
 
                 <h3>17. Our use of re-marketing</h3>
-                <p>Re-marketing involves placing a cookie on your computer when you browse our website in order to be able to serve to you an advert for our products or services when you visit some other website.</p>
+                <p>Re-marketing involves placing a cookie on your computer when you browse our website in order to be able to serve to you an advert for our services when you visit some other website.</p>
 
                 <p>We may use a third party to provide us with re-marketing services from time to time. If so, then if you have consented to our use of cookies, you may see advertisements for our products and services on other websites.</p>
 
@@ -335,22 +324,19 @@ permalink: /privacy-policy/
                 <p>To assist in combating fraud, we share information with credit reference agencies, so far as it relates to clients or customers who instruct their credit card issuer to cancel payment to us without having first provided an acceptable reason to us and given us the opportunity to refund their money.</p>
 
                 <h3>19. Data may be processed outside the European Union</h3>
-                <p>Our websites are hosted in the United Kingdom.</p>
+                <p>Our website is hosted in the United Kingdom.</p>
 
-                <p>We may also use outsourced services in countries outside the European Union from time to time in other aspects of our business.</p>
+                <p>We may also use outsourced services in countries outside the UK from time to time in other aspects of our business.</p>
 
-                <p>Accordingly data obtained within the UK or any other country could be processed outside the European Union.</p>
+                <p>Accordingly, data obtained within the UK or any other country could be processed outside the UK.</p>
 
                 <p>For example, some of the software our website uses may have been developed in the United States of America or in Australia.</p>
 
-                <p>We use the following safeguards with respect to data transferred outside the European Union:</p>
+                <p>We use the following safeguards with respect to data transferred outside the UK:</p>
 
                 <ul>
-                    <li> the processor is within the same corporate group as our business or organisation and abides by the same binding corporate rules regarding data processing.</li>
-                    <li>the data protection clauses in our contracts with data processors include transfer clauses written by or approved by a supervisory authority in the European Union.</li>
-                    <li> we comply with a code of conduct approved by a supervisory authority in the European Union.</li>
-                    <li>we are certified under an approved certification mechanism as provided for in the Act.</li>
-                    <li>both our organisation and the processor are public authorities between whom there is either a legally binding agreement or administrative arrangements approved by a supervisory authority in the European Union relating to protection of your information.</li>
+                    <li>the data protection clauses in our contracts with data processors include transfer clauses written by or approved by a supervisory authority.</li>
+                    <li> we comply with a code of conduct approved by a supervisory authority.</li>
                 </ul>
 
                 <h2>Control over your own information</h2>
@@ -359,9 +345,8 @@ permalink: /privacy-policy/
                 <p>It is important that the personal data we hold about you is accurate and current. Please keep us informed if your personal data changes.</p>
 
                 <h3>21. Access to your personal information</h3>
-                <p>At any time you may review or update personally identifiable information that we hold about you, by signing in to your account on our website.</p>
 
-                <p>To obtain a copy of any information that is not provided on our website you should contact us to make that request.</p>
+                <p>To obtain a copy of any information that we hold about you, you should contact us to make that request.</p>
 
                 <p>After receiving the request, we will tell you when we expect to provide you with the information, and whether we require any fee for providing it to you.</p>
 
@@ -375,13 +360,12 @@ permalink: /privacy-policy/
 
                 <h2>Other matters</h2>
                 <h3>24. Use of site by children</h3>
-                <p>We do not sell products or provide services for purchase by children, nor do we market to children.</p>
+                <p>We do not provide services for purchase by children, nor do we market to children.</p>
 
                 <p>If you are under 18, you may use our website only with consent from a parent or guardian.</p>
 
                 <p>
-                    We collect data about all users of and visitors to these areas regardless of age, and we anticipate that some of those users and visitors will be children.<br>
-                    Such child users and visitors will inevitably visit other parts of the site and will be subject to whatever on-site marketing they find, wherever they visit.
+                    We collect data about all users of and visitors to these areas regardless of age, and we anticipate that some of those users and visitors will be children. Such child users and visitors will inevitably visit other parts of the site and will be subject to whatever on-site marketing they find, wherever they visit.
                 </p>
 
                 <h3>25. Encryption of data sent between us</h3>
@@ -414,6 +398,7 @@ permalink: /privacy-policy/
                 <p>We may update this privacy notice from time to time as necessary. The terms that apply to you are those posted here on our website on the day you use our website. We advise you to print a copy for your records.</p>
 
                 <p>If you have any question regarding our privacy policy, please contact us.</p>
+                <p>Last updated: 10 July 2022.</p>
             </div>
         </div>
         <div class="contact section">
