Update link to privacy policy

--- a/events.html
+++ b/events.html
@@ -128,7 +128,7 @@ permalink: /events/
                         <p><a href="https://sybilmayard.com/services">Services</a></p>
                         <p><a href="https://sybilmayard.com/contact">Contact</a></p>
                         <p><a href="https://sybilmayard.com/terms-and-conditions">Terms and Conditions</a></p>
-                        <p><a href="https://sybilmayard.com/privacy-policy">Privacy Policy</a></p>
+                        <p><a href="https://sybilmayard.com/uploads/privacy-policy-v2.pdf" target="_blank">Privacy Policy</a></p>
                     </div>
                     <div class="col-2">
                         <h4>Services</h4>
