--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -24,7 +24,7 @@ permalink: /privacy-policy/
         <meta property="og:title" content="Privacy Policy | Web Development and E-Commerce | Sybiltech" />
         <meta property="og:description" content="Sybil Mayard provides web development services 
             for SMEs in Shopify, Squarespace, WordPress and Wix. Read my privacy policy here." />
-        <meta property="og:url" content="https://sybilmayard.com/privacy-policy/" />
+        <meta property="og:url" content="https://sybilmayard.com/uploads/privacy-policy-v2.pdf" target="_blank/" />
         <meta property="og:site_name" content="Sybiltech" />
         <meta property="og:image" content="https://sybilmayard.com/images/logos/sybiltech-logo-social.png" />
         <meta name="twitter:card" content="summary_large_image" />
@@ -35,7 +35,7 @@ permalink: /privacy-policy/
         <meta name="twitter:label2" content="Estimated reading time">
         <meta name="twitter:data2" content="15 minutes">
         <meta name="google-site-verification" content="4CQdjA8VuHHdJlLAeL33JXUNCcg92x6Yy2MK2H-F5rs" />
-        <link rel="canonical" href="https://sybilmayard.com/privacy-policy/" />
+        <link rel="canonical" href="https://sybilmayard.com/uploads/privacy-policy-v2.pdf" target="_blank/" />
         <link rel="stylesheet" href="https://sybilmayard.com/styles.min.css" type="text/css">
         <link rel="icon" type="image/png" href="https://sybilmayard.com/favicon.png">
         <!-- MailerLite Universal -->
@@ -417,7 +417,7 @@ permalink: /privacy-policy/
                         <p><a href="https://sybilmayard.com/services">Services</a></p>
                         <p><a href="https://sybilmayard.com/contact">Contact</a></p>
                         <p><a href="https://sybilmayard.com/terms-and-conditions">Terms and Conditions</a></p>
-                        <p><a href="https://sybilmayard.com/privacy-policy">Privacy Policy</a></p>
+                        <p><a href="https://sybilmayard.com/uploads/privacy-policy-v2.pdf" target="_blank">Privacy Policy</a></p>
                     </div>
                     <div class="col-2">
                         <h4>Services</h4>
