--- a/terms-and-conditions.html
+++ b/terms-and-conditions.html
@@ -170,7 +170,7 @@ permalink: /terms-and-conditions/
 
                 <h3>5. Miscellaneous matters</h3>
                 <p>
-                    5.1. Our privacy policy is strong and precise. It complies fully with the Data Protection Act 2018 which is at <a href="https://sybilmayard.com/privacy-policy">https://sybilmayard.com/privacy-policy</a>.<br>
+                    5.1. Our privacy policy is strong and precise. It complies fully with the Data Protection Act 2018 which is at <a href="https://sybilmayard.com/uploads/privacy-policy-v2.pdf" target="_blank">https://sybilmayard.com/uploads/privacy-policy-v2.pdf" target="_blank</a>.<br>
                     5.2. If any term or provision of this agreement is at any time held by any jurisdiction to be void, invalid or unenforceable, then it shall be treated as changed or reduced, only to the extent minimally necessary to bring it within the laws of that jurisdiction and to prevent it from being void and it shall be binding in that changed or reduced form. Subject to that, each provision shall be interpreted as severable and shall not in any way affect any other of these terms.<br>
                     5.3. No failure or delay by any party to exercise any right, power or remedy will operate as a waiver of it nor indicate any intention to reduce that or any other right in the future.<br>
                     5.4. Any communication to be served on either party by the other shall be delivered by hand or sent by first class post or by e-mail.<br>
@@ -198,7 +198,7 @@ permalink: /terms-and-conditions/
                         <p><a href="https://sybilmayard.com/services">Services</a></p>
                         <p><a href="https://sybilmayard.com/contact">Contact</a></p>
                         <p><a href="https://sybilmayard.com/terms-and-conditions">Terms and Conditions</a></p>
-                        <p><a href="https://sybilmayard.com/privacy-policy">Privacy Policy</a></p>
+                        <p><a href="https://sybilmayard.com/uploads/privacy-policy-v2.pdf" target="_blank">Privacy Policy</a></p>
                     </div>
                     <div class="col-2">
                         <h4>Services</h4>
