--- a/events.html
+++ b/events.html
@@ -61,20 +61,18 @@ permalink: /events/
             <div class="container-1000 center">
                 <div class="topnav" id="myTopnav">
                     <a href="/">Home</a>                    
-                    <a href="https://sybilmayard.com/events">Events</a>
-                    <a href="https://sybilmayard.com/building-business-shopify">Shopify Course</a>                   
+                    <a href="https://sybilmayard.com/services">Services</a>
+                    <a href="https://sybilmayard.com/clients">Clients</a>
                     <div class="dropdown">
                         <button class="dropbtn">About
-                            <i class="fa fa-caret-down"></i>
+                            <i class="fas fa-caret-down"></i>
                         </button>
                         <div class="dropdown-content">
-                            <a href="https://sybilmayard.com/about">About</a>
-                            <a href="https://sybilmayard.com/clients">Clients</a>
-                            <a href="https://sybilmayard.com/services">Services</a>
-                            <a href="https://sybilmayard.com/faqs">FAQs</a>
+                            <a href="https://sybilmayard.com/about">About Me</a>
+                            <a href="https://sybilmayard.com/projects">Projects</a>
                         </div>
-                    </div>                    
-                    <a href="https://sybilmayard.com/projects">Projects</a>
+                    </div>     
+                    <a href="https://sybilmayard.com/faqs">FAQs</a>
                     <div class="dropdown">
                         <button class="dropbtn">Blog
                             <i class="fa fa-caret-down"></i>
