Simplify top navigation

--- a/clients.html
+++ b/clients.html
@@ -62,27 +62,10 @@ permalink: /clients/
                     <a href="/">Home</a>                    
                     <a href="https://sybilmayard.com/services">Services</a>
                     <a href="https://sybilmayard.com/clients">Clients</a>
-                    <div class="dropdown">
-                        <button class="dropbtn">About
-                            <i class="fas fa-caret-down"></i>
-                        </button>
-                        <div class="dropdown-content">
-                            <a href="https://sybilmayard.com/about">About Me</a>
-                            <a href="https://sybilmayard.com/projects">Projects</a>
-                        </div>
-                    </div>     
+                    <a href="https://sybilmayard.com/about">About Me</a>
+                    <a href="https://sybilmayard.com/projects">Projects</a>   
                     <a href="https://sybilmayard.com/faqs">FAQs</a>
-                    <div class="dropdown">
-                        <button class="dropbtn">Blog
-                            <i class="fa fa-caret-down"></i>
-                        </button>
-                        <div class="dropdown-content">
-                            <a href="https://sybilmayard.com/6-reasons-to-use-shopify">6 Reasons Why You Should Be Using Shopify</a>
-                            <a href="https://sybilmayard.com/webtip-wednesday-series-launched-on-twitter">WebTip Wednesday Series Launched on Twitter</a>
-                            <a href="https://sybilmayard.com/5-best-tools-for-remote-working">5 Best Tools For Remote Working</a>
-                            <a href="https://sybilmayard.com/6-tips-for-surviving-remote-working">6 Tips For Surviving Remote Working</a>
-                        </div>
-                    </div>
+                    <a href="https://sybilmayard.com/blog">Blog</a>
                     <a href="https://sybilmayard.com/contact">Contact</a>
                     <a href="javascript:void(0);" class="icon" onclick="myFunction()">
                         <i class="fa fa-bars"></i>
