--- a/faqs.html
+++ b/faqs.html
@@ -42,7 +42,7 @@ permalink: /faqs/
                     <li>Branding guidelines</li>
                     <li>Company logo</li>
                     <li>Any partner logos</li>
-                    <li>High quality images (if you don’t have your own images, I can provide you 
+                    <li>High quality images (if you don't have your own images, I can provide you 
                         with links to free stock photos)</li>
                     <li>Links to social media profiles</li>
                     <li>Links to videos</li>
@@ -64,14 +64,6 @@ permalink: /faqs/
                         Shopify</a> and <a href=https://www.squarespace.com/>Squarespace</a>."
                 }
               }, {
-                "@type": "Question",
-                "name": "Would we need to meet in person?",
-                "acceptedAnswer": {
-                  "@type": "Answer",
-                  "text":"Until further notice, all meetings will be via <a href=https://zoom.us/>Zoom</a> or 
-                    <a href=https://meet.google.com/>Google Meet</a>."
-                }
-            }, {
                 "@type": "Question",
                 "name": "What is the process for developing a website?",
                 "acceptedAnswer": {
@@ -217,7 +209,7 @@ permalink: /faqs/
                     <li>Branding guidelines</li>
                     <li>Company logo</li>
                     <li>Any partner logos</li>
-                    <li>High quality images (if you don’t have your own images, I can provide you with links to free stock photos)</li>
+                    <li>High quality images (if you don't have your own images, I can provide you with links to free stock photos)</li>
                     <li>Links to social media profiles</li>
                     <li>Links to videos</li>
                     <li>Access to your domain and hosting (if applicable)</li>
@@ -235,11 +227,6 @@ permalink: /faqs/
                     <a href="https://www.shopify.co.uk/" target="_blank" rel="noopener noreferrer">
                         Shopify</a> and <a href="https://www.squarespace.com/" target="_blank" 
                         rel="noopener noreferrer">Squarespace</a>.</p>
-                <h3>Would we need to meet in person?</h3>
-                <p>Until further notice, all meetings will be via <a href="https://zoom.us/" 
-                    target="_blank" rel="noopener noreferrer">Zoom</a> or
-                    <a href="https://meet.google.com/" target="_blank" 
-                    rel="noopener noreferrer">Google Meet</a>.</p>
                 <h3>What is the process for developing a website?</h3>
                 <p>The first step would be to arrange a free consultation to discuss your requirements. After this initial meeting, I would provide you with detailed quote. If you are happy to proceed, I will send you an agreement. Once the agreement has been signed by both of us, I will proceed with the work.</p>
                     <ul>
