--- a/index.html
+++ b/index.html
@@ -148,22 +148,6 @@ permalink: /
                 <a class="btn-primary" href="https://sybilmayard.com/clients">View All Clients</a>   
             </div>
         </div>
-        <div class="events section">
-            <div class="container-1000">
-                <h2 class="center">NEW! Building a Business Using Shopify</h2>
-                <hr>
-                <div class="row">
-                    <div class="col-6">                        
-                        <img src="https://sybilmayard.com/images/logos/shopify_logo_black-300x86.png" alt="Shopify logo">                 
-                    </div>
-                    <div class="col-6">                       
-                        <p class="padding-bottom">Sybiltech and CNT Associates have partnered together to produce a new webinar
-                                series teaching you how to start your e-commerce business using Shopify.</p>
-                        <a class="btn-cnt" href="https://sybilmayard.com/events">View Events</a>          
-                    </div>
-                </div>
-            </div>
-        </div>
         <div class="testimonials section grey">
             <div class="container-1000">
                 <h2 class="center">My Happy Clients!</h2>
@@ -175,7 +159,7 @@ permalink: /
                             <div class="center">
                                 <img src="https://sybilmayard.com/images/logos/nerowireart.png" alt="Nerowireart">
                             </div>
-                            <h4>Zita Stone</h4>
+                            <h4>Dr Zita Stone</h4>
                             <p class="center">Nerowireart</p>
                         </div>
                     </div>
