--- a/projects.html
+++ b/projects.html
@@ -80,10 +80,10 @@ permalink: /projects/
             </div>
         </div>
         <div class="main section">
-            <div class="container-1000">
+            <div class="container-1000" id="vidcareer">
                 <h2 class="padding-top">VidCareer</h2>
                 <hr class="left-align">
-                <p class="padding-top">VidCareer has been my biggest achievement so far. It's a start-up idea that began during my time at the <a href="https://www.kent.ac.uk/" target="_blank" rel="noopener noreferrer">University of Kent</a>. VidCareer is a recruitment platform and social enterprise that helps small businesses connect with candidates via online career events – like careers fairs, but delivered virtually. There are clear benefits for both parties: less time and money spent on networking events, and it's kinder to the environment too.</p>
+                <p class="padding-top">VidCareer has been my biggest achievement so far. It's a start-up idea that began during my time at the <a href="https://www.kent.ac.uk/" target="_blank" rel="noopener noreferrer">University of Kent</a>. VidCareer is a recruitment platform and social enterprise that helps small businesses connect with candidates via online career events - like careers fairs, but delivered virtually. There are clear benefits for both parties: less time and money spent on networking events, and it's kinder to the environment too.</p>
 
                 <p>For the last several months, I have been developing a fully-functional prototype platform that has helped keep my coding skills up-to-date. Please visit the <a href="https://vidcareer.herokuapp.com/" target="_blank" rel="noopener noreferrer">VidCareer</a> demo site to learn more about how it works.</p>
 
