Update navigation with Design

--- a/blog.html
+++ b/blog.html
@@ -64,6 +64,7 @@ permalink: /blog/
                     <a href="/">Home</a>                    
                     <a href="https://sybilmayard.com/services">Services</a>
                     <a href="https://sybilmayard.com/clients">Clients</a>
+                    <a href="https://sybilmayard.com/design">Design</a>
                     <a href="https://sybilmayard.com/about">About Me</a>
                     <a href="https://sybilmayard.com/projects">Projects</a>   
                     <a href="https://sybilmayard.com/faqs">FAQs</a>
