--- a/faqs.html
+++ b/faqs.html
@@ -176,6 +176,7 @@ permalink: /faqs/
                     <a href="/">Home</a>                    
                     <a href="https://sybilmayard.com/services">Services</a>
                     <a href="https://sybilmayard.com/clients">Clients</a>
+                    <a href="https://sybilmayard.com/design">Design</a>
                     <a href="https://sybilmayard.com/about">About Me</a>
                     <a href="https://sybilmayard.com/projects">Projects</a>   
                     <a href="https://sybilmayard.com/faqs">FAQs</a>
@@ -234,7 +235,8 @@ permalink: /faqs/
                         <li>If you have an existing website and you require my maintenance services, I will request access to the platform. Once I receive the required permissions I will begin with the work. I will send you regular updates via email so that you are always aware of the status of the project.</li>
                     </ul>
                 <h3>Can I see examples of your previous work?</h3>
-                <p>Of course, please see my <a href="https://sybilmayard.com/clients">Clients</a> page for examples of past work I have carried out for clients.</p>
+                <p>Of course, please see my <a href="https://sybilmayard.com/clients">Clients</a>
+                    <a href="https://sybilmayard.com/design">Design</a> page for examples of past work I have carried out for clients.</p>
                 <h3>What are your qualifications?</h3>
                 <p>I hold an MSc in Computer Science from the <a href="https://www.kent.ac.uk" 
                     target="_blank" rel="noopener noreferrer">University of Kent</a>.</p>
