--- a/5-best-tools-for-remote-working.html
+++ b/5-best-tools-for-remote-working.html
@@ -74,6 +74,7 @@ permalink: /5-best-tools-for-remote-working/
                     <a href="/">Home</a>                    
                     <a href="https://sybilmayard.com/services">Services</a>
                     <a href="https://sybilmayard.com/clients">Clients</a>
+                    <a href="https://sybilmayard.com/design">Design</a>
                     <a href="https://sybilmayard.com/about">About Me</a>
                     <a href="https://sybilmayard.com/projects">Projects</a>   
                     <a href="https://sybilmayard.com/faqs">FAQs</a>
