Fix broken images on design.html

--- a/design.html
+++ b/design.html
@@ -85,21 +85,21 @@ permalink: /design/
                 <hr class="left-align">
                 <p>A selection of posters, flyers and leaflet designs.</p>
                 <div class="design">
-                    <img id="0" class="myImg" src="images/design/CNT-Associates-Getting-Your-Business-Online.jpg" alt="CNT Associates - Getting Your Business Online" onClick="openModal(0)">
-                    <img id="1" class="myImg" src="images/design/CNT-Associates-Setting-Up-an-Online-Store-For-Your-Business-Using-Shopify.jpg" alt="CNT Associates - Setting Up an Online Store For Your Business Using Shopify" onClick="openModal(1)">
-                    <img id="2" class="myImg" src="images/design/Future-Communities-Loneliness-Project.jpg" alt="Future Communities - Loneliness Project" onClick="openModal(2)">
-                    <img id="3" class="myImg" src="images/design/Happily-Clappily-Ever-Laughter-Lakeview-Court.jpg" alt="Happily Clappily Ever Laughter @ Lakeview Court" onClick="openModal(3)">
-                    <img id="4" class="myImg" src="images/design/Happily-Clappily-Ever-Laughter-Loneliness-Project.jpg" alt="Happily Clappily Ever Laughter - Loneliness Project" onClick="openModal(4)">
-                    <img id="5" class="myImg" src="images/design/Happily-Clappily-Ever-Laughter-Wellness-Sessions.jpg" alt="Happily Clappily Ever Laughter - Wellness Sessions" onClick="openModal(5)">
-                    <img id="6" class="myImg" src="images/design/Pre-loved-Sale-and-Fundraiser.jpg" alt="Pre-loved Sale and Fundraiser" onClick="openModal(6)">
-                    <img id="7" class="myImg" src="images/design/reel_women_introductory_video-making_course.jpg" alt="Reel Women Introductory Video-Making Course" onClick="openModal(7)">
-                    <img id="8" class="myImg" src="images/design/shadowlight_group_exhibition.jpg" alt="The Shadowlight Group Exhibition" onClick="openModal(8)">
-                    <img id="9" class="myImg" src="images/design/shadowlight_group_flash_frame_artist_presentation.jpg" alt="Shadowlight Group Flash Frame Artist Presentation" onClick="openModal(9)">
-                    <img id="10" class="myImg" src="images/design/shadowlight_group_postcard_front.jpg" alt="Shadowlight Group Postcard (Front)" onClick="openModal(10)">
-                    <img id="11" class="myImg" src="images/design/shadowlight_group_postcard_back.jpg" alt="Shadowlight Group Postcard (Back)" onClick="openModal(11)">
-                    <img id="12" class="myImg" src="images/design/shadowlight_group_poster.jpg" alt="Shadowlight Group Poster" onClick="openModal(12)">
-                    <img id="13" class="myImg" src="images/design/TK-Maxx-Valentines-Day-2014-v1.jpg" alt="TK Maxx Valentine's Day 2014 v1" onClick="openModal(13)">
-                    <img id="14" class="myImg" src="images/design/TK-Maxx-Valentines-Day-2014-v2.jpg" alt="TK Maxx Valentine's Day 2014 v2" onClick="openModal(14)">
+                    <img id="0" class="myImg" src="https://sybilmayard.com/images/design/CNT-Associates-Getting-Your-Business-Online.jpg" alt="CNT Associates - Getting Your Business Online" onClick="openModal(0)">
+                    <img id="1" class="myImg" src="https://sybilmayard.com/images/design/CNT-Associates-Setting-Up-an-Online-Store-For-Your-Business-Using-Shopify.jpg" alt="CNT Associates - Setting Up an Online Store For Your Business Using Shopify" onClick="openModal(1)">
+                    <img id="2" class="myImg" src="https://sybilmayard.com/images/design/Future-Communities-Loneliness-Project.jpg" alt="Future Communities - Loneliness Project" onClick="openModal(2)">
+                    <img id="3" class="myImg" src="https://sybilmayard.com/images/design/Happily-Clappily-Ever-Laughter-Lakeview-Court.jpg" alt="Happily Clappily Ever Laughter @ Lakeview Court" onClick="openModal(3)">
+                    <img id="4" class="myImg" src="https://sybilmayard.com/images/design/Happily-Clappily-Ever-Laughter-Loneliness-Project.jpg" alt="Happily Clappily Ever Laughter - Loneliness Project" onClick="openModal(4)">
+                    <img id="5" class="myImg" src="https://sybilmayard.com/images/design/Happily-Clappily-Ever-Laughter-Wellness-Sessions.jpg" alt="Happily Clappily Ever Laughter - Wellness Sessions" onClick="openModal(5)">
+                    <img id="6" class="myImg" src="https://sybilmayard.com/images/design/Pre-loved-Sale-and-Fundraiser.jpg" alt="Pre-loved Sale and Fundraiser" onClick="openModal(6)">
+                    <img id="7" class="myImg" src="https://sybilmayard.com/images/design/reel_women_introductory_video-making_course.jpg" alt="Reel Women Introductory Video-Making Course" onClick="openModal(7)">
+                    <img id="8" class="myImg" src="https://sybilmayard.com/images/design/shadowlight_group_exhibition.jpg" alt="The Shadowlight Group Exhibition" onClick="openModal(8)">
+                    <img id="9" class="myImg" src="https://sybilmayard.com/images/design/shadowlight_group_flash_frame_artist_presentation.jpg" alt="Shadowlight Group Flash Frame Artist Presentation" onClick="openModal(9)">
+                    <img id="10" class="myImg" src="https://sybilmayard.com/images/design/shadowlight_group_postcard_front.jpg" alt="Shadowlight Group Postcard (Front)" onClick="openModal(10)">
+                    <img id="11" class="myImg" src="https://sybilmayard.com/images/design/shadowlight_group_postcard_back.jpg" alt="Shadowlight Group Postcard (Back)" onClick="openModal(11)">
+                    <img id="12" class="myImg" src="https://sybilmayard.com/images/design/shadowlight_group_poster.jpg" alt="Shadowlight Group Poster" onClick="openModal(12)">
+                    <img id="13" class="myImg" src="https://sybilmayard.com/images/design/TK-Maxx-Valentines-Day-2014-v1.jpg" alt="TK Maxx Valentine's Day 2014 v1" onClick="openModal(13)">
+                    <img id="14" class="myImg" src="https://sybilmayard.com/images/design/TK-Maxx-Valentines-Day-2014-v2.jpg" alt="TK Maxx Valentine's Day 2014 v2" onClick="openModal(14)">
                 </div>
                 <!-- The Modal -->
                 <div id="myModal" class="modal">
